<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FA2F2F"
        android:orientation="vertical"
        tools:context=".FragmentZeroStarActionQQ">


        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="178dp"
            android:layout_height="276dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/movie1"
            android:src="@drawable/zerostar9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="181dp"
            android:layout_height="281dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/movie2"
            android:src="@drawable/zerostar10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="179dp"
            android:layout_height="267dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/movie3"
            android:src="@drawable/zerostar11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="180dp"
            android:layout_height="283dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/movie4"
            android:src="@drawable/zerostar12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/Movie13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Path Finder (5.4/10)"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView21"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Movie14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:text="The Seeker (4.8/10)"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView23"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/Movie15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:text="CatWoman (3.4/10)"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView24" />

        <TextView
            android:id="@+id/Movie16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:text="DragonBall Evo (2.5/10)"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView22" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>